@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xsd:schema targetNamespace="http://localhost/transports/http/configuration"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+
+    <xsd:include schemaLocation="../wsdl/http-conf.xsd" />
+
+</xsd:schema>
